tests/error/struct_errors/func_overrides_field2.err
Error: Duplicate field (at $FILE:11:4)
   | 
 9 | class MyStruct:
10 |     @guppy(module)
11 |     def x(self: "MyStruct") -> int:
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
12 |         return 0
   | ^^^^^^^^^^^^^^^^ Struct `MyStruct` already contains a field named `x`

Guppy compilation failed due to 1 previous error
